--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Tones</string>
+    <string name="settings">Settings</string>
+    <string name="octave">Octave</string>
+    <string-array name="octaves">
+        <item>110</item>
+        <item>220</item>
+        <item>440</item>
+    </string-array>
 
 
 </resources>
