existing panel settings now implemented. not persistent yet.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Tones</string>
     <string name="settings">Settings</string>
     <string name="octave">Octave</string>
+    <string name="wave">Wave Form</string>
     <string-array name="octaves">
         <item>110</item>
         <item>220</item>
